--- a/08 copy/src/assets/css/tailwind.css
+++ b/08 copy/src/assets/css/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer components {
+  /* 아이템 수평 & 수직 중앙 정렬 */
+  .item-middle {
+    @apply flex items-center justify-center min-h-screen;
+  }
+}
